# dndbeyond-parser

./: .gitignore  Cargo.toml  README.md  fetch.py  out.json  transpose.py
monsters/: 1123061-aruk-thundercaller-thuunlakalaga.html  1123062-auril-first-form.html  1123063-auril-second-form.html  1123064-auril-third-form.html  1123065-avarice.html  1123066-awakened-white-moose.html  1123067-battlehammer-dwarf.html  1123068-bjornhild-solvigsdottir.html  1123069-brain-in-a-jar.html  1123070-chardalyn-berserker.html  1123071-chardalyn-dragon.html  1123072-chimeric-baboon.html  1123073-chimeric-cat.html  1123074-chimeric-fox.html  1123075-chimeric-hare.html  1123076-chimeric-rat.html  1123077-chimeric-weasel.html  1123078-coldlight-walker.html  1123079-demos-magen.html  1123080-dzaan.html  1123081-dzaans-simulacrum.html  1123082-fox.html  1123083-frost-druid.html  1123084-frost-giant-skeleton.html  1123085-galvan-magen.html  1123086-giant-walrus.html  1123087-gnoll-vampire.html  1123088-gnome-ceremorph.html  1123089-gnome-squidling.html  1123090-goliath-warrior.html  1123091-goliath-werebear.html  1123092-grandolpha-muzgardt.html  1123093-gunvald-halraggson.html  1123094-hare.html  1123095-headless-iron-golem.html  1123096-hengar-aesnvaard.html  1123097-hypnos-magen.html  1123098-piercer-ice-variant.html  1123099-ice-troll.html  1123100-icewind-kobold-zombie.html  (+2504 more)
pages/: 1.html  10.html  100.html  101.html  102.html  103.html  104.html  105.html  106.html  107.html  108.html  109.html  11.html  110.html  111.html  112.html  113.html  114.html  115.html  116.html  117.html  118.html  119.html  12.html  120.html  121.html  122.html  123.html  124.html  125.html  126.html  127.html  128.html  129.html  13.html  130.html  14.html  15.html  16.html  17.html  (+90 more)
src/: creature.rs  dndbeyond.rs  lib.rs  main.rs  utility.rs
src/dndbeyond/: creature_list.rs
